Adding invoking line numbers to call graph.